--- a/style.css
+++ b/style.css
@@ -91,8 +91,8 @@ form .input-box span.details{
  }
  form .button{
    height: 45px;
-   width:45px;
-   margin: 35px 0
+   width:50%;
+   margin: 0 auto;
  }
  form .button input{
    height: 100%;
@@ -164,7 +164,4 @@ p {
     color: #e69600;
   }
 
-  /* transform: scale(0.99); */
-.button-container{
-    background-color: red;
-}
+  /* transform: scale(0.99); */ 
